--- a/libguides-scraper.ipynb
+++ b/libguides-scraper.ipynb
@@ -10,12 +10,53 @@
    "source": [
     "from bs4 import BeautifulSoup\n",
     "import requests\n",
-    "import re"
+    "import re\n",
+    "from utils import *"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def go():\n",
+    "    memo = {}\n",
+    "    soups = html_parser(get_text(\"http://community.libguides.com/?action=0&inst_type=2\"))\n",
+    "    links = list(filter(url_filter, soups.find_all(A)))\n",
+    "\n",
+    "    for i in range(len(links)):\n",
+    "        print(i+1, 'of', len(links))\n",
+    "        link = links[i]\n",
+    "        try:\n",
+    "            memo[link.text] = {}\n",
+    "\n",
+    "            site = html_parser(get_text(link[HREF] + \"/az.php\"))\n",
+    "            site_id = to_site_id(site.find_all('script'))\n",
+    "            site_url = link[HREF] + \"/az_process.php?action=520&first=all\" + (\"&site_id=\"+site_id if site_id else \"\")\n",
+    "\n",
+    "            print(site_url)\n",
+    "            soup = html_parser(get(site_url).json()['data']['html'])\n",
+    "            anchors = soup.find_all(A)\n",
+    "            print('found', len(anchors), 'databases')\n",
+    "            for i in range(len(anchors)):\n",
+    "                x = anchors[i]\n",
+    "                if not x: break\n",
+    "                try:\n",
+    "                    memo[link.text][tag_to_str(x.contents[0]).strip()] = x.get('href')\n",
+    "                except Exception as ex:\n",
+    "                    print('error while parsing', link.text, 'databases:', ex)\n",
+    "        except Exception as ex:\n",
+    "            print('error while requesting', link.text, 'databases:', ex)\n",
+    "\n",
+    "    return memo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -423,80 +464,12 @@
     }
    ],
    "source": [
-    "HREF = 'href'\n",
-    "A = 'a'\n",
-    "\n",
-    "def get(url):\n",
-    "    return requests.get(url)\n",
-    "\n",
-    "def get_text(url):\n",
-    "    return get(url).text\n",
-    "\n",
-    "def html_parser(text):\n",
-    "    return BeautifulSoup(text, 'html.parser')\n",
-    "\n",
-    "def url_filter(aref):\n",
-    "    href = aref.get(HREF)\n",
-    "    return href and href.startswith(\"http\")\n",
-    "\n",
-    "def to_site_id(scripts):\n",
-    "    found = None\n",
-    "    for script in scripts:\n",
-    "        src = script.get('src')\n",
-    "        if not src: break\n",
-    "        fa = re.search('site_id=(\\d+)', src)\n",
-    "        found_id = fa and fa.group(1)\n",
-    "\n",
-    "        if not found and found_id:\n",
-    "            found = found_id\n",
-    "\n",
-    "        elif found and found_id:\n",
-    "            raise Exception(\"found two site ids!\")\n",
-    "\n",
-    "    return found\n",
-    "\n",
-    "def tag_to_str(mtag):\n",
-    "    try:\n",
-    "        return mtag.text\n",
-    "    except:\n",
-    "        return mtag\n",
-    "\n",
-    "def go():\n",
-    "    memo = {}\n",
-    "    soups = html_parser(get_text(\"http://community.libguides.com/?action=0&inst_type=2\"))\n",
-    "    links = list(filter(url_filter, soups.find_all(A)))\n",
-    "\n",
-    "    for i in range(len(links)):\n",
-    "        print(i+1, 'of', len(links))\n",
-    "        link = links[i]\n",
-    "        try:\n",
-    "            memo[link.text] = {}\n",
-    "\n",
-    "            site = html_parser(get_text(link[HREF] + \"/az.php\"))\n",
-    "            site_id = to_site_id(site.find_all('script'))\n",
-    "            site_url = link[HREF] + \"/az_process.php?action=520&first=all\" + (\"&site_id=\"+site_id if site_id else \"\")\n",
-    "\n",
-    "            print(site_url)\n",
-    "            soup = html_parser(get(site_url).json()['data']['html'])\n",
-    "            anchors = soup.find_all(A)\n",
-    "            print('found', len(anchors), 'databases')\n",
-    "            for i in range(len(anchors)):\n",
-    "                x = anchors[i]\n",
-    "                if not x: break\n",
-    "                try:\n",
-    "                    memo[link.text][tag_to_str(x.contents[0]).strip()] = x.get('href')\n",
-    "                except Exception as ex:\n",
-    "                    print('error while parsing', link.text, 'databases:', ex)\n",
-    "        except Exception as ex:\n",
-    "            print('error while requesting', link.text, 'databases:', ex)\n",
-    "\n",
-    "    return memo\n",
     "memo = go()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -507,7 +480,7 @@
        "62247"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
